test/corpus/changelog.txt
===============================================================================
Changelog (Empty)
===============================================================================

%changelog

-------------------------------------------------------------------------------

(spec
  (changelog))

===============================================================================
Changelog (without Version)
===============================================================================

%changelog
* Fri Jun 21 2002 Alice <alice@alice.com>
- automated rebuild

-------------------------------------------------------------------------------

(spec
  (changelog
    (changelog_entry
      (string_content)
      (string
        (string_content)))))

===============================================================================
Changelog (Version)
===============================================================================

%changelog
* Tue May 08 2001 Alice Alice <alice@alice.com> 1.3-1
- updated to 1.3

-------------------------------------------------------------------------------

(spec
  (changelog
    (changelog_entry
      (string_content)
      (string
        (string_content)))))

===============================================================================
Changelog (Multi-line)
===============================================================================

%changelog
* Fri May 32 9999 Alice Alice <alice@alice.com> 1.3-1
- Updated to 1.3
- Fixed a bug

-------------------------------------------------------------------------------

(spec
  (changelog
    (changelog_entry
      (string_content)
      (string
        (string_content))
      (string
        (string_content)))))
