test/corpus/macros.txt
===============================================================================
Macros (%define)
===============================================================================

%define foo bar

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (variable_name)
    (string (string_content))))

===============================================================================
Macros (%global)
===============================================================================

%global foo bar

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (variable_name)
    (string (string_content))))

===============================================================================
Macros (%global positive integer)
===============================================================================

%global foo 1

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (variable_name)
    (integer)))

===============================================================================
Macros (%global negative integer)
===============================================================================

%global foo -1

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (variable_name)
    (integer)))

===============================================================================
Macros (%global hex)
===============================================================================

%global foo 0x20

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (variable_name)
    (integer)))

===============================================================================
Macros (%global with empty arguments)
===============================================================================

%global foo() bar

-------------------------------------------------------------------------------

(spec
  (macro_definition
    (variable_name)
    (macro_options)
    (string (string_content))))

===============================================================================
Macros (%undefine)
===============================================================================

%undefine foo

-------------------------------------------------------------------------------

(spec
  (macro_undefinition
    (variable_name)))

===============================================================================
Macros (Usage/No Braces)
===============================================================================

%getncpus

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (variable_name)))

===============================================================================
Macros (Usage/Braces)
===============================================================================

%{getncpus}

-------------------------------------------------------------------------------

(spec
  (macro_expansion
    (variable_name)))

===============================================================================
Macros (Empty Shell Expansion)
===============================================================================

%()

-------------------------------------------------------------------------------

(spec
  (macro_shell_expansion))

===============================================================================
Macros (Expansion with argument)
===============================================================================

# Expansion
%bcond_without foo

# Just some comment

-------------------------------------------------------------------------------

(spec
  (comment)
  (macro_invocation
    (macro_expansion
      (variable_name))
    (string
      (string_content)))
  (comment))

===============================================================================
Macros (Expansion with multiple arguments)
===============================================================================

# Expansion
%bcond foo 1

# Just some comment

-------------------------------------------------------------------------------

(spec
  (comment)
  (macro_invocation
    (macro_expansion
      (variable_name))
    (string
      (string_content)))
  (comment))
