test/corpus/scriptlets.txt
===============================================================================
Prep Section (Empty)
===============================================================================

%prep

-------------------------------------------------------------------------------

(spec
  (prep_scriptlet))

===============================================================================
Prep Section (%setup)
===============================================================================

%prep
%setup -q

-------------------------------------------------------------------------------

(spec
  (prep_scriptlet
    (string_with_newlines
      (simple_expansion
        (variable_name))
      (string_content_with_newlines))))


===============================================================================
Prep Section (%autosetup)
===============================================================================

%prep
%autosetup

-------------------------------------------------------------------------------

(spec
  (prep_scriptlet
    (string_with_newlines
      (simple_expansion
        (variable_name)))))
