test/corpus/subpackage.txt
===============================================================================
Subpackage (subpackage)
===============================================================================

%package client
Summary: Client

-------------------------------------------------------------------------------

(spec
  (package
    (section_name)
    (word)
    (preamble
      (tags
        (tag)
        (word)))))

===============================================================================
Subpackage (subpackage with arbitrary name)
===============================================================================

%package -n subpackage
Summary: Subpackage

-------------------------------------------------------------------------------

(spec
  (package
    (section_name)
    (word)
    (preamble
      (tags
        (tag)
        (word)))))

===============================================================================
Subpackage (subpackage with arbitrary name with macros)
===============================================================================

%package -n %{name}-subpackage
Summary: Subpackage

-------------------------------------------------------------------------------

(spec
  (package
    (section_name)
    (concatenation
      (macro_expansion
        (identifier))
      (word))
    (preamble
      (tags
        (tag)
        (word)))))
